# ray

./: .gitignore  .gitmodules  Cargo.toml  README.md
demo/raymed/: .gitignore  .prettierignore  .prettierrc.cjs  .yarnrc.yml  package.json
demo/raymed/hw_interface_proto/: hw_interface.ino
examples/ml-mnist/: .gitignore  Cargo.toml
examples/ml-mnist/dataset/: README.md
examples/ml-mnist/src/: dataset.rs  main.rs
examples/ml-xor/: Cargo.toml
examples/ml-xor/src/: main.rs
lib/ml/: Cargo.toml
lib/ml/src/: lib.rs
lib/shared/: Cargo.toml
lib/shared/src/: lib.rs
soc/: .gitignore  build.sbt
soc/firmware-test/: Cargo.toml  Makefile.toml  build.rs
soc/firmware-test/src/: main.rs
soc/hw/spinal/raysoc/: Config.scala  MlExec.scala  RaySoc.scala  RaySocSim.scala
soc/hw/spinal/raysoc/utils/: Bin.scala  RSN.scala
tools/bin2mem/: Cargo.toml
tools/bin2mem/src/: main.rs
