[package]
name = "ray-ml"
version = "0.1.0"
edition = "2021"

[dependencies]
ray-shared = { path = "../shared" }
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0.213", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.132"
